--- a/html/about.html
+++ b/html/about.html
@@ -15,8 +15,9 @@
 
 <body>
     <header>
+        <!-- Se crea una caja para contener los elementos-->
         <div class="box-1">
-            <h1 class="title" id="header-title" onclick="cambiarColor()" title="Name!">Sebastian Pereira</h1>
+            <h1 class="title" id="header-title" title="Name!">Sebastian Pereira</h1>
             <figure>
                 <img src="../assets/img/golden-logo-template-free-png.webp" alt="Imagen-logo" title="Sebastian Pereira">
             </figure>
@@ -39,7 +40,7 @@
 
     </header>
     <main>
-        <section class="grid-container">
+        <section class="section-main">
             <div class="grid-item">
                 <table>
                     <caption>Interactive Elements</caption>
