--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 
 <body>
     <header>
+        <!-- Se crea una caja para contener los elementos-->
         <div class="box-1">
-            <h1 class="title" id="header-title" onclick="cambiarColor()" title="Name!">Sebastian Pereira</h1>
+            <h1 class="title" id="header-title" title="Name!">Sebastian Pereira</h1>
             <figure>
                 <img src="./assets/img/golden-logo-template-free-png.webp" alt="Imagen-logo" title="Sebastian Pereira">
             </figure>
         </div>
-        <div class="navbar">
+        <div class="navbar"> <!--Creamos este div para contener a los elementos-->
             <nav>
                 <ul>
                     <li>
@@ -41,7 +42,7 @@
     <main>
         <section class="grid-container">
             <div class="grid-item">
-                <h3>service 1</h3>
+                <h2>service 1</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita tempora, voluptatem consectetur
                     tenetur, voluptate similique porro inventore quos omnis ullam optio quas in totam corrupti esse id
                     cum obcaecati? Delectus?</p>
@@ -64,7 +65,6 @@
     <footer class="footer-page">
         <small>all right by Riwi</small>
     </footer>
-    <script src="./js/script.js"></script>
 </body>
 
 </html>
