--- a/html/contact.html
+++ b/html/contact.html
@@ -15,8 +15,9 @@
 
 <body>
     <header>
+        <!-- Se crea una caja para contener los elementos-->
         <div class="box-1">
-            <h1 class="title" id="header-title" onclick="cambiarColor()" title="Name!">Sebastian Pereira</h1>
+            <h1 class="title" id="header-title" title="Name!">Sebastian Pereira</h1>
             <figure>
                 <img src="../assets/img/golden-logo-template-free-png.webp" alt="Imagen-logo" title="Sebastian Pereira">
             </figure>
@@ -39,21 +40,21 @@
 
     </header>
     <main>
-        <section class="grid-container">
+        <section class="section-main">
             <div class="grid-item">
                 <form action="/send" method="post">
                     <h2>Visual Customization</h2>
 
-                    <label for="nameº">Name</label>
+                    <label for="name">Name</label>
                     <input type="text" id="name" name="name">
 
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email">
 
-                    <label for="message">Message</label>
-                    <textarea style="resize: none;" name="message" id="message"></textarea>
+                    <label for="number">Phone</label>
+                    <input type="number" id="number" name="number">
 
-                    <button type="reset" width="20px">send</button>
+                    <button type="reset" width="20">send</button>
                 </form>
             </div>
         </section>
