--- a/html/about.html
+++ b/html/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <!--<meta http-equiv="refresh" content="60">-->
+    <meta http-equiv="refresh" content="60">
     <meta name="author" content="Sebastian Pereira">
     <meta name="description" content="Esta pagina es de la semana 3">
     <meta name="keyword" content="html, css, comienzo, empezando, semana3, flex, grid, animaciones, principiante">
